unpackaged/main/default/objects/litify_docs__File_Object_Preferences__c/litify_docs__File_Object_Preferences__c.object-meta.xml
<CustomObject>
    <description>For each object which can have files related to it, we must create a record of a separate preferences object</description>
    <label>File Object Preferences</label>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Object Preferences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>