unpackaged/main/default/objects/litify_docs__File_Object_Preferences__c/fields/litify_docs__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Order__c</fullName>
    <description>Dictates the order of objects in object selector drop-downs.</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>