unpackaged/main/default/objects/litify_docs__File_Object_Preferences__c/fields/litify_docs__Portal_Account_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Portal_Account_Field_API_Name__c</fullName>
    <label>Portal Account Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>