unpackaged/main/default/objects/litify_docs__File_Object_Preferences__c/fields/litify_docs__Portal_Sharing_Default__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Portal_Sharing_Default__c</fullName>
    <description>Used to store the selected org default for what should be shared with the Portal.</description>
    <label>Portal Sharing Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected Folders</fullName>
                <default>true</default>
                <label>Selected Folders</label>
            </value>
            <value>
                <fullName>All Folders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>